--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:mock": "\"npm run e2e:server\" ng serve --host=0.0.0.0 --disable-host-check --proxy-config ./src/e2e-proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "e2e:server": "node e2e/e2e-server.js"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
     "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0-rc.4",
     "rxjs": "~6.5.4",
